# snippets

./: .buildinfo  .gitignore  CMakeLists.txt  CNAME  README.rst  advanced_readline_usage.py  conftool.py  dbus_glib_hal_signals.c  dbus_glib_hal_signals.py  dbus_qt4_hal_signals.cpp  easy_uninstall.py  flatten_nested_lists.py  forking.py  genindex.html  hal_discs.py  hal_touchpad_daemon.py  hal_usage.py  index.html  kde4_phonon.py  kdialog_progressbar.bash  magic_database.py  misc.html  objects.inv  onetimepad.py  posix_getch.c  pruefercode.py  pwgen.py  pycrypto_aes_padding.py  python-misc.html  qt4_checkable_filesystem_model.py  qt4_configobj_editor.py  qt4_countdown.py  qt4_dbus_trayicon.py  qt4_foldable_checkboxes.py  qt4_frameless_fullscreen.py  qt4_icons_listview.py  qt4_image_scaling.py  qt4_input_validation.py  qt4_painting.py  qt4_phonon_audio.py  (+26 more)
_sources/: misc.txt
_sources/qt4/: designer.txt  index.txt
doc/: Makefile  conf.py  fabfile.py  index.rst  misc.rst  python-misc.rst  references.rst  snippets.py  udev.rst
doc/qt4/: designer.rst  index.rst
python-misc/: README.rst  advanced_readline_usage.py  conftool.py  du.py  easy_uninstall.py  flatten_nested_lists.py  magic_database.py  onetimepad.py  posix_getch.py  pruefercode.py  pwgen.py  pycrypto_aes_padding.py  redirect_fd.py  screenshot.py  ssh_client.py  xmpp_muc_logger.py  xmpp_muc_logger_unthreaded.py
qt4/: CMakeLists.txt  README.rst  checkable_filesystem_model.py  countdown.py  dbus_trayicon.py  designer.html  foldable_checkboxes.py  frameless_fullscreen.py  icons_listview.py  image_scaling.py  index.html  input_validation.py  painting.py  phonon_audio.py  phonon_duplicate_video.py  phonon_video.py  qimage_from_gdk_pixbuf.cpp  qt4_checkable_filesystem_model.py  qt4_countdown.py  qt4_dbus_trayicon.py  qt4_icons_listview.py  qt4_image_scaling.py  qt4_input_validation.py  qt4_painting.py  qt4_phonon_audio.py  qt4_phonon_video.py  qt4_simple_shell_widget.py  qt4_thread_progress.py  qt4_webkit_render_to_image.py  qt4_x11_key_names.py  qt4_xml_model.py  simple_shell_widget.py  sort_filter_model.py  table_header_alignment.py  table_resize.py  tcp_socket.py  text_editor.py  text_editor.ui  thread_progress.py  toolbar_in_tabs.py  (+4 more)
qt4/designer/: CMakeLists.txt  README.rst  mainwindow.cpp  mainwindow.h  mainwindow.ui  pyqt4_dynamic.py  pyside_dynamic.py  qt4_static.cpp
udev/: CMakeLists.txt  README.rst  qudevobserver.cpp  qudevobserver.h  udev_auto_ptr.hpp  udev_enumerate.cpp  udev_enumerate.py  udev_monitor.cpp  udev_monitor.h  udev_monitor.py
